--- a/composer.json
+++ b/composer.json
@@ -30,14 +30,12 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/",
-			
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/",
-			
+            "Tests\\": "tests/"
         }
     },
     "extra": {
